--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             overflow-x: hidden;
         }
 
-        /* 1. Поиск */
+        /* 1. Поиск и silvershop */
         .search-wrapper {
             background-color: white;
             padding: 10px 15px;
@@ -47,7 +47,7 @@
         .search-icon { width: 16px; height: 16px; opacity: 0.7; }
         .header-extra-icon { width: 24px; height: 24px; object-fit: contain; }
 
-        /* 2. Большие рекламные баннеры */
+        /* 2. Верхние баннеры (над сервисами) */
         .banners-container {
             background-color: white;
             padding-top: 10px;
@@ -60,17 +60,21 @@
             -webkit-overflow-scrolling: touch;
         }
         .banners-scroll::-webkit-scrollbar { display: none; }
+        
         .banner-item {
             min-width: 85%;
-            height: 120px;
+            height: 125px;
             border-radius: 12px;
             display: flex;
             align-items: flex-end;
             padding: 15px;
             box-sizing: border-box;
             color: white;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
         }
-        .banner-title { font-weight: 800; font-size: 18px; margin-bottom: 5px; }
+        .banner-title { font-weight: 800; font-size: 18px; text-shadow: 0 1px 4px rgba(0,0,0,0.4); }
 
         /* 3. Сетка сервисов */
         .services-grid {
@@ -95,7 +99,7 @@
         }
         .service-name { font-size: 11.5px; font-weight: 600; color: var(--text-dark); letter-spacing: -0.2px; }
 
-        /* 4. НОВЫЙ БЛОК: Маленькие баннеры (red.png и credit.png) */
+        /* 4. Маленькие баннеры (Рассрочка и Кредит) */
         .small-promo-container {
             background-color: white;
             margin-top: 10px;
@@ -104,15 +108,15 @@
         .promo-row {
             display: flex;
             align-items: center;
-            padding: 12px 0;
-            gap: 12px;
+            padding: 14px 0;
+            gap: 15px;
             border-bottom: 1px solid #f0f0f0;
         }
         .promo-row:last-child { border-bottom: none; }
         
         .promo-img {
-            width: 36px;  /* Фиксированный размер для обоих */
-            height: 36px; /* Фиксированный размер для обоих */
+            width: 36px;  /* Единый размер */
+            height: 36px; /* Единый размер */
             object-fit: contain;
         }
         .promo-text {
@@ -121,10 +125,11 @@
             color: var(--text-dark);
         }
 
-        /* 5. Остальные блоки */
+        /* 5. Остальные блоки (Magnum, Товары) */
         .magnum-row { background: white; margin-top: 10px; padding: 15px; display: flex; align-items: center; gap: 12px; border-bottom: 1px solid #e5e5e5; }
         .section-title { padding: 18px 15px 10px; font-weight: 800; font-size: 19px; }
-        .products-scroll { display: flex; overflow-x: auto; padding: 0 15px; gap: 12px; }
+        .products-scroll { display: flex; overflow-x: auto; padding: 0 15px; gap: 12px; scrollbar-width: none; }
+        .products-scroll::-webkit-scrollbar { display: none; }
         .product-card { min-width: 150px; background: white; border-radius: 12px; padding: 12px; box-shadow: 0 1px 3px rgba(0,0,0,0.05); }
 
         /* 6. Таббар */
@@ -132,6 +137,7 @@
             position: fixed; bottom: 0; left: 0; right: 0;
             background: white; display: grid; grid-template-columns: repeat(4, 1fr);
             padding: 8px 0; border-top: 1px solid #e5e5e5; z-index: 1000;
+            padding-bottom: env(safe-area-inset-bottom);
         }
         .tab-item { display: flex; flex-direction: column; align-items: center; font-size: 10px; color: var(--gray-text); gap: 4px; }
         .tab-item.active { color: var(--kaspi-red); font-weight: 700; }
@@ -140,51 +146,84 @@
 </head>
 <body>
 
-<div class="search-wrapper">
-    <div class="search-bar">
-        <img src="magnifier.png" class="search-icon">
-        Поиск по Kaspi.kz
-    </div>
-    <img src="silvershop.png" class="header-extra-icon">
-</div>
-
-<div class="banners-container">
-    <div class="banners-scroll">
-        <div class="banner-item" style="background: linear-gradient(135deg, #FF512F 0%, #DD2476 100%);">
-            <div><div class="banner-title">Гаджеты в Рассрочку</div></div>
+    <div class="search-wrapper">
+        <div class="search-bar">
+            <img src="magnifier.png" class="search-icon">
+            Поиск по Kaspi.kz
         </div>
-        <div class="banner-item" style="background: linear-gradient(135deg, #2193b0 0%, #6dd5ed 100%);">
-            <div><div class="banner-title">Кешбэк на услуги</div></div>
+        <img src="silvershop.png" class="header-extra-icon">
+    </div>
+
+    <div class="banners-container">
+        <div class="banners-scroll">
+            <div class="banner-item" style="background-image: url('reklama.png');">
+                <div class="banner-title"></div> </div>
+            <div class="banner-item" style="background: linear-gradient(135deg, #2193b0 0%, #6dd5ed 100%);">
+                <div class="banner-title">Кешбэк на услуги</div>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="services-grid">
-    <div class="service-item"><div class="icon-wrapper"><img src="qr.png" class="service-icon"></div><div class="service-name">Kaspi QR</div></div>
-    <div class="service-item"><div class="icon-wrapper"><img src="bank.png" class="service-icon"></div><div class="service-name">Мой Банк</div></div>
-    <div class="service-item"><div class="icon-wrapper"><img src="pay.png" class="service-icon"></div><div class="service-name">Платежи</div></div>
-    <div class="service-item"><div class="icon-wrapper"><img src="transfer.png" class="service-icon"></div><div class="service-name">Переводы</div></div>
-    <div class="service-item"><div class="icon-wrapper"><img src="shop.png" class="service-icon"></div><div class="service-name">Магазин</div></div>
-    <div class="service-item"><div class="icon-wrapper"><img src="travel.png" class="service-icon"></div><div class="service-name">Travel</div></div>
-    <div class="service-item"><div class="icon-wrapper"><img src="gos.png" class="service-icon"></div><div class="service-name">Госуслуги</div></div>
-    <div class="service-item"><div class="icon-wrapper"><img src="ads.png" class="service-icon"></div><div class="service-name">Объявления</div></div>
-</div>
+    <div class="services-grid">
+        <div class="service-item"><div class="icon-wrapper"><img src="qr.png" class="service-icon"></div><div class="service-name">Kaspi QR</div></div>
+        <div class="service-item"><div class="icon-wrapper"><img src="bank.png" class="service-icon"></div><div class="service-name">Мой Банк</div></div>
+        <div class="service-item"><div class="icon-wrapper"><img src="pay.png" class="service-icon"></div><div class="service-name">Платежи</div></div>
+        <div class="service-item"><div class="icon-wrapper"><img src="transfer.png" class="service-icon"></div><div class="service-name">Переводы</div></div>
+        <div class="service-item"><div class="icon-wrapper"><img src="shop.png" class="service-icon"></div><div class="service-name">Магазин</div></div>
+        <div class="service-item"><div class="icon-wrapper"><img src="travel.png" class="service-icon"></div><div class="service-name">Travel</div></div>
+        <div class="service-item"><div class="icon-wrapper"><img src="gos.png" class="service-icon"></div><div class="service-name">Госуслуги</div></div>
+        <div class="service-item"><div class="icon-wrapper"><img src="ads.png" class="service-icon"></div><div class="service-name">Объявления</div></div>
+    </div>
 
-<div class="small-promo-container">
-    <div class="promo-row">
-        <img src="red.png" class="promo-img">
-        <div class="promo-text">Рассрочка 0-0-12</div>
+    <div class="small-promo-container">
+        <div class="promo-row">
+            <img src="red.png" class="promo-img">
+            <div class="promo-text">Рассрочка 0-0-12</div>
+        </div>
+        <div class="promo-row">
+            <img src="credit.png" class="promo-img">
+            <div class="promo-text">Кредит наличными</div>
+        </div>
     </div>
-    <div class="promo-row">
-        <img src="credit.png" class="promo-img">
-        <div class="promo-text">Кредит наличными</div>
-    </div>
-</div>
 
-<div class="magnum-row">
-    <div style="background: #e11c2a; color:white; width:45px; height:45px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:900; font-size: 22px;">M</div>
-    <div style="flex:1">
-        <div style="font-weight:700; font-size: 16px;">Magnum</div>
-        <div style="color:var(--gray-text); font-size:13px;">Продукты питания с доставкой</div>
+    <div class="magnum-row">
+        <div style="background: #e11c2a; color:white; width:45px; height:45px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:900; font-size: 22px;">M</div>
+        <div style="flex:1">
+            <div style="font-weight:700; font-size: 16px;">Magnum</div>
+            <div style="color:var(--gray-text); font-size:13px;">Продукты питания с доставкой</div>
+        </div>
+        <div style="color:#ccc; font-size: 18px;">❯</div>
     </div>
-    <div style="color
+
+    <div class="section-title">Вы недавно смотрели</div>
+    <div class="products-scroll">
+        <div class="product-card">
+            <div style="background:#f8f8f8; height:110px; border-radius:8px;"></div>
+            <div style="font-size:13px; margin-top:8px; font-weight: 600;">Товар 1</div>
+            <div style="font-size:14px; font-weight: 800; margin-top:4px;">0 ₸</div>
+        </div>
+        <div class="product-card">
+            <div style="background:#f8f8f8; height:110px; border-radius:8px;"></div>
+            <div style="font-size:13px; margin-top:8px; font-weight: 600;">Товар 2</div>
+            <div style="font-size:14px; font-weight: 800; margin-top:4px;">0 ₸</div>
+        </div>
+    </div>
+
+    <div class="tab-bar">
+        <div class="tab-item active"><span class="tab-icon">🏠</span><div>Главная</div></div>
+        <div class="tab-item"><span class="tab-icon">🔳</span><div>Kaspi QR</div></div>
+        <div class="tab-item"><span class="tab-icon">💬</span><div>Сообщения</div></div>
+        <div class="tab-item"><span class="tab-icon">☰</span><div>Сервисы</div></div>
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            if (window.Telegram && window.Telegram.WebApp) {
+                const tg = window.Telegram.WebApp;
+                tg.ready();
+                tg.expand();
+            }
+        });
+    </script>
+</body>
+</html>
