--- a/index.html
+++ b/index.html
@@ -11,151 +11,138 @@
             --bg-color: #f2f2f5;
             --text-dark: #222222;
             --gray-text: #8e8e93;
+            --card-shadow: 0 1px 3px rgba(0,0,0,0.1);
         }
 
         body {
             background-color: var(--bg-color);
-            margin: 0;
-            padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            margin: 0; padding: 0;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
             color: var(--text-dark);
-            padding-bottom: 90px;
+            padding-bottom: 100px;
             -webkit-font-smoothing: antialiased;
             overflow-x: hidden;
-            user-select: none; /* Запрещаем выделение текста для эффекта нативности */
+            user-select: none;
         }
 
-        /* 1. Поиск */
+        /* 1. Шапка и Приветствие */
+        .header-section { background: white; padding-top: 5px; }
+        .greeting { padding: 10px 15px 5px; font-size: 14px; color: var(--gray-text); }
+        .user-name { color: var(--text-dark); font-weight: 700; }
+
         .search-wrapper {
             background-color: white;
             padding: 10px 15px;
-            display: flex;
-            align-items: center;
-            gap: 12px;
-            border-bottom: 1px solid #e5e5e5;
+            display: flex; align-items: center; gap: 12px;
         }
         .search-bar {
             background-color: #f0f0f2;
-            border-radius: 8px;
-            padding: 9px 12px;
+            border-radius: 10px;
+            padding: 10px 12px;
             color: var(--gray-text);
             font-size: 15px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            flex: 1;
+            display: flex; align-items: center; gap: 10px; flex: 1;
         }
-        .search-icon { width: 16px; height: 16px; opacity: 0.7; }
-        .header-extra-icon { width: 24px; height: 24px; object-fit: contain; }
+        .search-icon { width: 16px; height: 16px; opacity: 0.5; }
+        .header-extra-icon { width: 26px; height: 26px; object-fit: contain; }
 
-        /* 2. Баннеры */
-        .banners-container {
-            background-color: white;
-            padding-top: 10px;
-        }
-        .banners-scroll {
+        /* 2. Блок Kaspi Gold */
+        .kaspi-gold-card {
+            background: white;
+            margin: 0 15px 15px;
+            padding: 15px;
+            border-radius: 12px;
+            box-shadow: var(--card-shadow);
             display: flex;
-            overflow-x: auto;
-            padding: 5px 15px 15px;
-            gap: 10px;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .kg-info { display: flex; align-items: center; gap: 12px; }
+        .kg-icon { width: 35px; height: 35px; }
+        .kg-text-main { font-weight: 700; font-size: 15px; display: block; }
+        .kg-text-sub { color: var(--gray-text); font-size: 12px; }
+        .kg-balance { font-weight: 800; font-size: 17px; }
+
+        /* 3. Рекламные баннеры */
+        .banners-container { background-color: white; }
+        .banners-scroll {
+            display: flex; overflow-x: auto;
+            padding: 5px 15px 20px; gap: 10px;
             -webkit-overflow-scrolling: touch;
         }
         .banners-scroll::-webkit-scrollbar { display: none; }
-        
         .banner-item {
-            min-width: 85%;
-            height: 125px;
-            border-radius: 12px;
-            display: flex;
-            align-items: flex-end;
-            padding: 15px;
-            box-sizing: border-box;
-            color: white;
-            background-position: center;
-            background-size: cover;
-            background-repeat: no-repeat;
+            min-width: 88%; height: 130px;
+            border-radius: 14px;
+            background-position: center; background-size: cover;
             transition: transform 0.1s;
         }
-        .banner-item:active { transform: scale(0.98); }
-        .banner-title { font-weight: 800; font-size: 18px; text-shadow: 0 1px 4px rgba(0,0,0,0.4); }
+        .banner-item:active { transform: scale(0.97); }
 
-        /* 3. Сетка сервисов */
+        /* 4. Сетка сервисов */
         .services-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            background: white;
-            padding: 10px 5px 20px;
-            gap: 22px 0;
-        }
-        .service-item { 
-            display: flex; 
-            flex-direction: column; 
-            align-items: center; 
-            text-align: center;
-            transition: opacity 0.1s;
-        }
-        .service-item:active { opacity: 0.6; } /* Эффект нажатия */
-
-        .icon-wrapper { height: 44px; width: 44px; display: flex; align-items: center; justify-content: center; margin-bottom: 6px; }
-        .service-icon {
-            width: 40px;
-            height: 40px;
-            object-fit: contain;
-            filter: drop-shadow(0.4px 0 0px #333) drop-shadow(-0.4px 0 0px #333) contrast(1.1) brightness(0.9);
-            transform: scale(1.05);
-        }
-        img[src="shop.png"] {
-            transform: scale(1.25) !important;
-        }
-        .service-name { font-size: 11.5px; font-weight: 600; color: var(--text-dark); letter-spacing: -0.2px; }
-
-        /* 4. Маленькие промо */
-        .small-promo-container { background-color: white; margin-top: 10px; padding: 0 15px; }
-        .promo-row {
-            display: flex; align-items: center; padding: 14px 0; gap: 15px;
+            display: grid; grid-template-columns: repeat(4, 1fr);
+            background: white; padding: 15px 5px; gap: 20px 0;
             border-bottom: 1px solid #f0f0f0;
         }
-        .promo-row:active { background-color: #f9f9f9; }
-        .promo-row:last-child { border-bottom: none; }
-        .promo-img { width: 36px; height: 36px; object-fit: contain; }
-        .promo-text { font-size: 15px; font-weight: 700; }
+        .service-item { display: flex; flex-direction: column; align-items: center; text-align: center; }
+        .service-item:active { opacity: 0.5; }
+        .icon-wrapper { height: 48px; width: 48px; display: flex; align-items: center; justify-content: center; margin-bottom: 4px; }
+        .service-icon { width: 42px; height: 42px; object-fit: contain; }
+        .service-name { font-size: 11px; font-weight: 600; letter-spacing: -0.1px; }
 
-        /* 5. Magnum и Товары */
-        .magnum-row { background: white; margin-top: 10px; padding: 15px; display: flex; align-items: center; gap: 12px; }
-        .magnum-row:active { background-color: #f9f9f9; }
-        .section-title { padding: 18px 15px 10px; font-weight: 800; font-size: 19px; }
-        .products-scroll { display: flex; overflow-x: auto; padding: 0 15px; gap: 12px; scrollbar-width: none; }
-        .products-scroll::-webkit-scrollbar { display: none; }
-        .product-card { min-width: 150px; background: white; border-radius: 12px; padding: 12px; box-shadow: 0 1px 3px rgba(0,0,0,0.05); }
+        /* 5. Промо-строки (Рассрочка/Кредит) */
+        .small-promo-container { background-color: white; padding: 0 15px; margin-bottom: 10px; }
+        .promo-row {
+            display: flex; align-items: center; padding: 15px 0; gap: 15px;
+            border-bottom: 1px solid #f5f5f5;
+        }
+        .promo-row:active { background-color: #fafafa; }
+        .promo-row:last-child { border-bottom: none; }
+        .promo-img { width: 34px; height: 34px; object-fit: contain; }
+        .promo-text { font-size: 15px; font-weight: 700; flex: 1; }
+        .arrow-right { color: #ccc; font-size: 18px; }
 
         /* 6. Таббар */
         .tab-bar {
             position: fixed; bottom: 0; left: 0; right: 0;
             background: white; display: grid; grid-template-columns: repeat(4, 1fr);
-            padding: 8px 0; border-top: 1px solid #e5e5e5; z-index: 1000;
-            padding-bottom: env(safe-area-inset-bottom);
+            padding: 10px 0 calc(10px + env(safe-area-inset-bottom));
+            border-top: 1px solid #e5e5e5; z-index: 1000;
         }
-        .tab-item { display: flex; flex-direction: column; align-items: center; font-size: 10px; color: var(--gray-text); gap: 4px; }
+        .tab-item { display: flex; flex-direction: column; align-items: center; font-size: 10px; color: var(--gray-text); gap: 5px; }
         .tab-item.active { color: var(--kaspi-red); font-weight: 700; }
-        .tab-icon { font-size: 20px; }
+        .tab-icon { font-size: 22px; }
     </style>
 </head>
 <body>
 
-    <div class="search-wrapper">
-        <div class="search-bar">
-            <img src="magnifier.png" class="search-icon">
-            Поиск по Kaspi.kz
+    <div class="header-section">
+        <div class="greeting">Здравствуйте, <span id="userName" class="user-name">Гость</span>!</div>
+        <div class="search-wrapper">
+            <div class="search-bar">
+                <img src="magnifier.png" class="search-icon">
+                Поиск по Kaspi.kz
+            </div>
+            <img src="silvershop.png" class="header-extra-icon">
         </div>
-        <img src="silvershop.png" class="header-extra-icon">
+    </div>
+
+    <div class="kaspi-gold-card" onclick="vibrate()">
+        <div class="kg-info">
+            <img src="bank.png" class="kg-icon">
+            <div>
+                <span class="kg-text-main">Kaspi Gold</span>
+                <span class="kg-text-sub">0000 •••• 0000</span>
+            </div>
+        </div>
+        <div class="kg-balance">500 000 ₸</div>
     </div>
 
     <div class="banners-container">
         <div class="banners-scroll">
             <div class="banner-item" style="background-image: url('reklama.png');"></div>
-            <div class="banner-item" style="background: linear-gradient(135deg, #2193b0 0%, #6dd5ed 100%);">
-                <div class="banner-title">Кешбэк на услуги</div>
-            </div>
+            <div class="banner-item" style="background: linear-gradient(135deg, #2193b0 0%, #6dd5ed 100%);"></div>
         </div>
     </div>
 
@@ -164,7 +151,7 @@
         <div class="service-item" onclick="vibrate()"><div class="icon-wrapper"><img src="bank.png" class="service-icon"></div><div class="service-name">Мой Банк</div></div>
         <div class="service-item" onclick="vibrate()"><div class="icon-wrapper"><img src="pay.png" class="service-icon"></div><div class="service-name">Платежи</div></div>
         <div class="service-item" onclick="vibrate()"><div class="icon-wrapper"><img src="transfer.png" class="service-icon"></div><div class="service-name">Переводы</div></div>
-        <div class="service-item" onclick="vibrate()"><div class="icon-wrapper"><img src="shop.png" class="service-icon"></div><div class="service-name">Магазин</div></div>
+        <div class="service-item" onclick="vibrate()"><div class="icon-wrapper"><img src="shop.png" class="service-icon" style="transform: scale(1.2);"></div><div class="service-name">Магазин</div></div>
         <div class="service-item" onclick="vibrate()"><div class="icon-wrapper"><img src="travel.png" class="service-icon"></div><div class="service-name">Travel</div></div>
         <div class="service-item" onclick="vibrate()"><div class="icon-wrapper"><img src="gos.png" class="service-icon"></div><div class="service-name">Госуслуги</div></div>
         <div class="service-item" onclick="vibrate()"><div class="icon-wrapper"><img src="ads.png" class="service-icon"></div><div class="service-name">Объявления</div></div>
@@ -174,41 +161,20 @@
         <div class="promo-row" onclick="vibrate()">
             <img src="red.png" class="promo-img">
             <div class="promo-text">Рассрочка 0-0-12</div>
+            <div class="arrow-right">❯</div>
         </div>
         <div class="promo-row" onclick="vibrate()">
             <img src="credit.png" class="promo-img">
             <div class="promo-text">Кредит наличными</div>
+            <div class="arrow-right">❯</div>
         </div>
     </div>
 
-    <div class="magnum-row" onclick="vibrate()">
-        <div style="background: #e11c2a; color:white; width:45px; height:45px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:900; font-size: 22px;">M</div>
-        <div style="flex:1">
-            <div style="font-weight:700; font-size: 16px;">Magnum</div>
-            <div style="color:var(--gray-text); font-size:13px;">Продукты питания с доставкой</div>
-        </div>
-        <div style="color:#ccc; font-size: 18px;">❯</div>
-    </div>
-
-    <div class="section-title">Вы недавно смотрели</div>
-    <div class="products-scroll">
-        <div class="product-card">
-            <div style="background:#f8f8f8; height:110px; border-radius:8px;"></div>
-            <div style="font-size:13px; margin-top:8px; font-weight: 600;">Товар 1</div>
-            <div style="font-size:14px; font-weight: 800; margin-top:4px;">0 ₸</div>
-        </div>
-        <div class="product-card">
-            <div style="background:#f8f8f8; height:110px; border-radius:8px;"></div>
-            <div style="font-size:13px; margin-top:8px; font-weight: 600;">Товар 2</div>
-            <div style="font-size:14px; font-weight: 800; margin-top:4px;">0 ₸</div>
-        </div>
-    </div>
-
-    <div class="tab-bar" id="tabBar">
-        <div class="tab-item active" onclick="switchTab(this, '🏠', 'Главная')"><span class="tab-icon">🏠</span><div>Главная</div></div>
-        <div class="tab-item" onclick="switchTab(this, '🔳', 'Kaspi QR')"><span class="tab-icon">🔳</span><div>Kaspi QR</div></div>
-        <div class="tab-item" onclick="switchTab(this, '💬', 'Сообщения')"><span class="tab-icon">💬</span><div>Сообщения</div></div>
-        <div class="tab-item" onclick="switchTab(this, '☰', 'Сервисы')"><span class="tab-icon">☰</span><div>Сервисы</div></div>
+    <div class="tab-bar">
+        <div class="tab-item active" onclick="switchTab(this)"><span class="tab-icon">🏠</span><div>Главная</div></div>
+        <div class="tab-item" onclick="switchTab(this)"><span class="tab-icon">🔳</span><div>Kaspi QR</div></div>
+        <div class="tab-item" onclick="switchTab(this)"><span class="tab-icon">💬</span><div>Сообщения</div></div>
+        <div class="tab-item" onclick="switchTab(this)"><span class="tab-icon">☰</span><div>Сервисы</div></div>
     </div>
 
     <script>
@@ -216,18 +182,20 @@
         tg.ready();
         tg.expand();
 
-        // Функция вибрации
-        function vibrate() {
-            tg.HapticFeedback.impactOccurred('light');
+        // Установка имени пользователя из Telegram
+        const user = tg.initDataUnsafe?.user;
+        if (user && user.first_name) {
+            document.getElementById('userName').innerText = user.first_name;
         }
 
-        // Функция переключения вкладок
-        function switchTab(element, icon, label) {
+        function vibrate() {
+            tg.HapticFeedback.impactOccurred('medium');
+        }
+
+        function switchTab(el) {
             vibrate();
-            document.querySelectorAll('.tab-item').forEach(item => {
-                item.classList.remove('active');
-            });
-            element.classList.add('active');
+            document.querySelectorAll('.tab-item').forEach(i => i.classList.remove('active'));
+            el.classList.add('active');
         }
     </script>
 </body>
